--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
             "react-quill": "^2.0.0",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "*",
+            "react-toastify": "^11.0.5",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
